--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="id">아이디</string>
     <string name="password">패스워드</string>
     <string name="loginButton">로그인</string>
+    <string name="signup">회원가입</string>
+    <string name="findAccount">계정 찾기</string>
     <string name="detailTvNameLabel">장소명</string>
     <string name="detailTvAddressLabel">주소</string>
     <string name="detailTvTimeLabel">개방시간</string>
