앱 이름 변경

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">camaps</string>
+    <string name="app_name">천안시설 어디야</string>
     <string name="title_activity_maps">Map</string>
     <string name="introTitle">어디야?</string>
     <string name="id">아이디</string>
