--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="introTitle">어디야?</string>
     <string name="id">아이디</string>
     <string name="password">패스워드</string>
+    <string name="nickname">닉네임</string>
     <string name="loginButton">로그인</string>
     <string name="signup">회원가입</string>
     <string name="findAccount">계정 찾기</string>
