--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,9 @@
     <string name="comment_button">전송</string>
     <string name="preference_file_key">kr.ac.sunmoon.gijoe.camaps.secret</string>
     <string name="secret">secret_key</string>
+    <string name="website">웹 사이트</string>
+    <string name="pay">요금</string>
+    <string name="tel">전화번호</string>
 
     <!-- TODO: Remove or change this placeholder text -->
 </resources>
